Update scroller overflows VD + fix zindex bug

--- a/css/preview-film-section.css
+++ b/css/preview-film-section.css
@@ -23,11 +23,12 @@
   -o-transition: all 500ms ease-out;
   transition: all 500ms ease-out;
 
-  background-image: linear-gradient(45deg, rgba(0,0,0, 0.5) 25%, transparent 25%, transparent 75%, rgba(0,0,0, 0.5) 75%, rgba(0,0,0, 0.5)),
-                    linear-gradient(-45deg, rgba(0,0,0, 0.5) 25%, transparent 25%, transparent 75%, rgba(0,0,0, 0.5) 75%, rgba(0,0,0, 0.5));
+  background-image: linear-gradient(45deg, rgba(0,0,0, 0.8) 25%, transparent 25%, transparent 75%, rgba(0,0,0, 0.8) 75%, rgba(0,0,0, 0.8)),
+                    linear-gradient(-45deg, rgba(0,0,0, 0.8) 25%, transparent 25%, transparent 75%, rgba(0,0,0, 0.8) 75%, rgba(0,0,0, 0.8));
   background-size: 29px 45px;
   background-repeat: repeat-x;
   background-position-x: 3px;
+  z-index: 10;
 }
 
 .top-overflow {
